fix: elements alignment ~

--- a/src/components/CartTooltip/CartTooltip.module.scss
+++ b/src/components/CartTooltip/CartTooltip.module.scss
@@ -16,18 +16,20 @@
     max-height: 514px;
     margin-bottom: 24px;
     overflow-x: hidden;
+    
   }
 
   .total {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    margin-right: 32px;
+    padding-right: 32px;
+    margin-right: 8px;
     column-gap: 32px;
   }
 
   a {
-    padding: 16px 33px;
+    padding: 16px 32px;
     color: var(--white-color);
     background-color: var(--green-color);
     font-weight: 500;
@@ -55,7 +57,7 @@
 }
 
 .cards::-webkit-scrollbar-track {
-  background: transparent; 
+  background: transparent;
 }
 
 .cards::-webkit-scrollbar-thumb {
